DEAL-585: Bug fixing (591: Fields in Editing Deal Information pop up are not aligned )[0.0.7]

--- a/Client/DealnetPortal.Web/Content/less/credit-check.less
+++ b/Client/DealnetPortal.Web/Content/less/credit-check.less
@@ -53,7 +53,7 @@
   margin-top: 10px;
 }
 
-.dealnet-disabled-input{
+.dealnet-disabled-input:not(.form-control-disabled){
   border: none;
   background: none;
   text-align: right;
